--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
 				</div>
 				
 				<div class="col-lg-6">
-					<form role="form">
-					  <div class="form-group" action="https://formspree.io/matthewlurton@gmail.com" method="POST">
+					<form role="form" action="https://formspree.io/matthewlurton@gmail.com" method="POST">
+					  <div class="form-group">
 					    <label for="exampleInputName1">Your Name</label>
 					    <input type="name" class="form-control" id="exampleInputEmail1" placeholder="Enter name">
 					    <label for="exampleInputEmail1">Email address</label>
