--- a/index.html
+++ b/index.html
@@ -39,10 +39,6 @@
 			<a href="#about" class="smoothScroll">About Me</a>
 			<a href="#portfolio" class="smoothScroll">My Work</a>
 			<a href="#contact" class="smoothScroll">Contact Me</a>
-			<a href="#"><i class="fa fa-facebook"></i></a>
-			<a href="#"><i class="fa fa-twitter"></i></a>
-			<a href="#"><i class="fa fa-dribbble"></i></a>
-			<a href="#"><i class="fa fa-envelope"></i></a>
 		</div>
 		
 		<!-- Menu button -->
@@ -64,7 +60,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3">
-					<h1>317-828-0382 / matthewlurton@gmail.com</h1>
+					<h1><center>317-828-0382 / <a href="mailto:someone@example.com">matthewlurton@gmail.com</a></center></h1>
 				</div>
 			</div><! --/row -->
 		</div><! --/container -->
@@ -193,18 +189,18 @@
 				<h1>MY PROBLEM SOLVING PROCESS</h1>
 				<div class="col-lg-4 proc">
 					<i class="fa fa-fire-extinguisher"></i>
-					<h3>Identify</h3>
+					<h3>Identify the problem.</h3>
 					<p>The first step to solving any problem is to identify it as a problem, hopefully while it is still a small one.  Often the hard part is seeing past all the smoke and finding the true source of the fire. Once you have done this you can move on to the next step.</p>
 				</div>
 				<div class="col-lg-4 proc">
 					<i class="fa fa-puzzle-piece"></i>
-					<h3>Find the solution.</h3>
+					<h3>Find the right solution.</h3>
 					<p>Once you know the cause of the problem, you can begin the process of finding the solution. At this stage of the game it is key to ask lots of questions, gather all the data you can and then use it to begin to find the solution. Once you have gathered the data you can find the best solution, hopefully one that keeps the problem from coming back again.</p>
 				</div>
 				<div class="col-lg-4 proc">
 					<i class="fa fa-comment"></i>
-					<h3>Communicate the solution</h3>
-					<p>All the knowledge, and solutions, you might have is useless if you cannot communicate it clearly and effectively.  This is my favorite part.  I enjoy taking the solution and putting in a form that my clients or co-workers can easily understand and use.</p>
+					<h3>Communicate the solution clearly.</h3>
+					<p>All the knowledge, and solutions you might have are useless if you cannot communicate them clearly and effectively.  This is my favorite part.  I enjoy taking the solution and putting in a form that my clients or co-workers can easily understand and use.</p>
 				</div>
 				
 			</div><! --/row -->
@@ -238,7 +234,7 @@
 
 					    <div class="item mb centered">
 					      <h3>Grace Church</h3>
-					      <p>Human beings are created to need to believe in something bigger than themselves.  My faith gives me a foundation for those times in life when things don't make sense and a connection to things outside myself.  A key part of this foundation comes from my church community.  One of the ways I am able to give back to my church is volunteering regularly in the children's ministry.  Nothing puts life back in persepctive than an crying two year old or a fussy newborn.</p>
+					      <p>Human beings are created to need to believe in something bigger than themselves.  My faith gives me a foundation for those times in life when things don't make sense and a connection to things outside myself.  A key part of this foundation comes from my church community.  One of the ways I am able to give back to my church is volunteering regularly in the children's ministry.  Nothing puts life back in persepctive than a crying two year old or a fussy newborn.</p>
 					      <p><img class="img-circle" src="assets/img/pic-t3.jpg" width="80"></p>
 					    </div>
 
@@ -271,8 +267,8 @@
 						USA.</small>
 					</p>
 					<p>
-						<small>Tel. 317.828.0382<br/>
-						Mail. matthewlurton@gmail.com<br/>
+						<small>Tel: 317.828.0382<br/>
+						Mail: <a href="mailto:someone@example.com">matthewlurton@gmail.com</a><br/>
 					</p>
 			
 				</div>
