phone and email alignment correction

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3">
-					<h1><center>317-828-0382 / <a href="mailto:someone@example.com">matthewlurton@gmail.com</a></center></h1>
+					<h1><center>317-828-0382   <a href="mailto:someone@example.com">matthewlurton@gmail.com</a></center></h1>
 				</div>
 			</div><! --/row -->
 		</div><! --/container -->
